--- a/spec_a_console/templates/spec_a_console/index.html
+++ b/spec_a_console/templates/spec_a_console/index.html
@@ -1,10 +1,7 @@
+{% extends "base.html" %}
 
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Hypothetical Systems</title>
-</head>
-<body>
+{% block content %}
+
     <h1>Hypothetical Systems</h1>
     <ul>
         {% for system in hypothetical_systems %}
@@ -26,5 +23,5 @@
             {% endif %}
         </div>
     {% endif %}
-</body>
-</html>
+
+{% endblock %}
