--- a/spec_a_console/templates/spec_a_console/index.html
+++ b/spec_a_console/templates/spec_a_console/index.html
@@ -4,7 +4,7 @@
 
     <h1>Hypothetical Systems</h1>
     <ul>
-        {% for system in hypothetical_systems %}
+        {% for system in console_systems %}
             <li>
                 <strong>{{ system.name }}</strong> - {{ system.manufacturer }} ({{ system.release_year }})
                 <a href="{% url 'system_detail' system.slug %}" class="post-link">
