--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 <!-- static declaration and DTL values go here -->
+ {% load static %}
 
 <!DOCTYPE html>
 <html class="h-100" lang="en">
@@ -9,6 +10,9 @@
     <title>{% block title %}Capstone Project{% endblock %}</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 
 <body>
