--- a/templates/base.html
+++ b/templates/base.html
@@ -61,6 +61,19 @@
         </nav>
     </header>
 
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 offset-md-2">
+                {% for message in messages %}
+                <div class="alert {{ message.tags }} alert-dismissible fade show" id="msg" role="alert">
+                    {{ message | safe }}
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+
     <div class="bg-main-image">
         <!-- Main Content -->
         <main class="container my-4" id="main-content" tabindex="0">
