add review rating to reviews displayed below detailed system view in system_detailed.html

--- a/spec_a_console/templates/spec_a_console/system_detail.html
+++ b/spec_a_console/templates/spec_a_console/system_detail.html
@@ -79,6 +79,9 @@
                     <div id="review{{ review.id }}">
                         {{ review.comment | linebreaks }}
                     </div>
+                    <div>
+                        Score: {{ review.rating }}
+                    </div>
                     {% if not review.approved and review.reviewer == user %}
                     <p class="approval">
                         This review is awaiting approval
