add custom templates for login and logout pages

--- a/spec_a_console/templates/spec_a_console/system_detail.html
+++ b/spec_a_console/templates/spec_a_console/system_detail.html
@@ -53,7 +53,7 @@
     <div class="row">
         <div class="col-12">
             <strong class="text-secondary">
-                <i class="far fa-comments"></i> {{ review_count }}
+                <i class="far fa-comments">Review count: </i> {{ review_count }}
             </strong>
         </div>
         <div class="col-12">
