--- a/spec_a_console/templates/spec_a_console/system_detail.html
+++ b/spec_a_console/templates/spec_a_console/system_detail.html
@@ -88,10 +88,10 @@
                     </p>
                     {% endif %}
 
-                    <!-- {% if user.is_authenticated and review.author == user %}
+                    {% if user.is_authenticated and review.reviewer == user %}
                     <button class="btn btn-delete" data-review_id="{{ review.id }}">Delete</button>
                     <button class="btn btn-edit" data-review_id="{{ review.id }}">Edit</button>
-                    {% endif %} -->
+                    {% endif %}
 
                 </div>
                 <!-- Our for loop ends here -->
