--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
 
 {% url 'home' as home_url %}
 {% url 'create_system' as create_url %}
+{% url 'my_systems' as my_systems_url %}
 {% url 'account_login' as login_url %}
 {% url 'account_signup' as signup_url %}
 {% url 'account_logout' as logout_url %}
@@ -13,7 +14,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% block title %}Capstone Project{% endblock %}</title>
+    <title>{% block title %}Spec A System{% endblock %}</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -46,6 +47,10 @@
                                 href="{% url 'create_system' %}">Create System</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link {% if request.path == my_systems_url %}active" aria-current="page{% endif %}"
+                                href="{% url 'my_systems' %}">My Systems</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link {% if request.path == logout_url %}active" aria-current="page{% endif %}"
                                 href="{% url 'account_logout' %}">Logout</a>
                         </li>
@@ -64,6 +69,22 @@
             </div>
         </nav>
     </header>
+
+    <div class="container-fluid px-0">
+        <div class="row my-0">
+            <div class="col-12">
+                <div class="bg-light border-bottom border-primary py-2 ps-3">
+                    <h5 class="mb-0 text-start"></h5>
+                        {% if user.is_authenticated %}
+                            You are currently logged in as <strong>{{ user.username }}</strong>
+                        {% else %}
+                            Welcome, <strong>Guest</strong>
+                        {% endif %}
+                    </h5>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="container">
         <div class="row">
