--- a/spec_a_console/templates/spec_a_console/create_system.html
+++ b/spec_a_console/templates/spec_a_console/create_system.html
@@ -8,7 +8,7 @@
 
 <p>Create your system!</p>
 
-<form id="createForm" method="post">
+<form id="createForm" method="post" enctype="multipart/form-data">
     {{ create_form | crispy }}
     {% csrf_token %}
     <button id="submitButton" type="submit" class="btn btn-signup btn-lg">Submit</button>
