--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -13,3 +13,7 @@
     /* background-blend-mode makes the color blend with the image */
     background-blend-mode: darken;
 }
+
+.awaiting-approval {
+    color: red;
+}
