update index.html to use responsive bootstrap grid for displaying paginated list of bootstrap cards showing brief details of ConsoleSystems

--- a/spec_a_console/templates/spec_a_console/system_detail.html
+++ b/spec_a_console/templates/spec_a_console/system_detail.html
@@ -13,7 +13,7 @@
                 {% if "placeholder" in system.featured_image.url %}
                 <img src="{% static 'images/placeholder-image.webp' %}" class="scale" alt="placeholder image">
                 {% else %}
-                <img src="{{ system.featured_image.url }}" class="scale" alt="{{ post.title }}">
+                <img src="{{ system.featured_image.url }}" class="scale" alt="{{ system.name }}>
                 {% endif %}
                 <div class="card-body">
                     {% if system.approval != 1%}
