--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,8 @@
 <!-- static declaration and DTL values go here -->
 {% load static %}
 
-{% url 'home' as home_url %}
+<!-- {% url 'home' as home_url %} -->
+{% url 'index' as home_url %}
 {% url 'create_system' as create_url %}
 {% url 'my_systems' as my_systems_url %}
 {% url 'account_login' as login_url %}
@@ -25,9 +26,9 @@
 <body>
     <!-- Header and Navbar -->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary" aria-label="Main navigation">
+        <nav class="navbar navbar-expand-lg navbar-dark my-bg-primary" aria-label="Main navigation">
             <div class="container-fluid">
-                <a class="navbar-brand" href="{% url 'index' %}">Capstone Project</a>
+                <a class="navbar-brand" href="{% url 'index' %}">Spec A Console!</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -35,12 +36,13 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'index' %}">Home</a>
+                            <a class="nav-link {% if request.path == home_url %}active" aria-current="page{% endif %}"
+                                href="{% url 'index' %}">Home</a>
                         </li>
                         <!-- Add more nav items as needed -->
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link" href="#contact">Contact</a>
-                        </li>
+                        </li> -->
                         {% if user.is_authenticated %}
                         <li class="nav-item">
                             <a class="nav-link {% if request.path == create_url %}active" aria-current="page{% endif %}"
@@ -73,7 +75,7 @@
     <div class="container-fluid px-0">
         <div class="row my-0">
             <div class="col-12">
-                <div class="bg-light border-bottom border-primary py-2 ps-3">
+                <div class="my-bg-secondary border-bottom border-primary py-2 ps-3">
                     <h5 class="mb-0 text-start"></h5>
                         {% if user.is_authenticated %}
                             You are currently logged in as <strong>{{ user.username }}</strong>
@@ -126,8 +128,8 @@
                 </div>
             </div>
         </div>
-        <div class="text-center p-3 bg-primary text-white">
-            &copy; {{ year|default:2025 }} Capstone Project
+        <div class="text-center p-3 my-bg-primary text-white">
+            &copy; {{ year|default:2025 }} Spec A Console!
         </div>
     </footer>
 
