--- a/static/css/style.css
+++ b/static/css/style.css
@@ -78,3 +78,11 @@ p {
 .awaiting-approval {
     color: red;
 }
+
+/* Styling for index.html and my_systems.html */
+
+.card-img-fixed {
+    height: 200px;
+    object-fit: cover;
+    width: 100%;
+}
