--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -22,7 +22,7 @@
                 {% if redirect_field_value %}
                 <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
                 {% endif %}
-                <button class="btn btn-signup right" type="submit">{% trans 'Sign Out' %}</button>
+                <button class="btn btn-login" type="submit">{% trans 'Log Out' %}</button>
             </form>
         </div>
     </div>
