--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,7 @@
                         {% else %}
                         <li class="nav-item">
                             <a class="nav-link {% if request.path == signup_url %}active" aria-current="page{% endif %}"
-                                href="{% url 'account_signup' %}">Register</a>
+                                href="{% url 'account_signup' %}">Sign Up</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link {% if request.path == login_url %}active" aria-current="page{% endif %}"
