--- a/spec_a_console/templates/spec_a_console/system_detail.html
+++ b/spec_a_console/templates/spec_a_console/system_detail.html
@@ -112,10 +112,7 @@
                     </p>
                     {% endif %}
 
-                    <!-- {% if user.is_authenticated and review.reviewer == user %}
-                    <button class="btn btn-delete" data-review_id="{{ review.id }}">Delete</button>
-                    <button class="btn btn-edit" data-review_id="{{ review.id }}">Edit</button>
-                    {% endif %} -->
+                    <!-- Edit / Delete review for user-owner will go here -->
 
                 </div>
                 <!-- Our for loop ends here -->
