--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -94,3 +94,23 @@ p {
     color: #fff;
     border: 1px solid var(--light-highlight);
 }
+
+/* Styling to override Bootstrap alerts */
+
+.info {
+    background-color: rgb(255, 255, 168) !important; /* Choose your color */
+    color: #000000 !important;           /* Choose your text color */
+    border-color: rgb(131, 131, 0) !important;
+}
+
+.alert-success {
+    background-color: var(--light-highlight) !important; /* Choose your color */
+    color: #000000 !important;            /* Choose your text color */
+    border-color: var(--highlight-color) !important;
+}
+
+.alert-danger {
+    background-color: rgb(255, 193, 193) !important; /* Choose your color */
+    color: #000000 !important;            /* Choose your text color */
+    border-color: #e51616 !important;
+}
