--- a/spec_a_console/templates/spec_a_console/index.html
+++ b/spec_a_console/templates/spec_a_console/index.html
@@ -13,7 +13,7 @@
     </div>
 
     <!-- Responsive grid of system cards -->
-    <div class="row g-4">
+    <div class="row g-4 mb-4">
         {% for system in console_systems %}
             <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
                 <div class="card h-100">
@@ -42,11 +42,11 @@
 
     <!-- Pagination -->
     {% if is_paginated %}
-        <nav aria-label="Page navigation" class="mt-4">
+        <nav aria-label="Page navigation" class="mt-5">
             <ul class="pagination justify-content-center">
                 {% if page_obj.has_previous %}
                     <li class="page-item">
-                        <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+                        <a class="page-link" href="?page={{ page_obj.previous_page_number }}">&lt;&lt; Previous</a>
                     </li>
                 {% endif %}
                 <li class="page-item disabled">
@@ -54,7 +54,8 @@
                 </li>
                 {% if page_obj.has_next %}
                     <li class="page-item">
-                        <a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a>
+                        <a class="page-link" href="?page={{ page_obj.next_page_number }}">Next &gt;&gt;
+</a>
                     </li>
                 {% endif %}
             </ul>
