--- a/spec_a_console/templates/spec_a_console/system_detail.html
+++ b/spec_a_console/templates/spec_a_console/system_detail.html
@@ -134,13 +134,13 @@
                 <h5 class="modal-title" id="deleteSystemModalLabel">Confirm Delete</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body">
+            <div class="modal-body bg-black text-white">
                 <p>Are you sure you want to delete <strong>{{ system.name }}</strong>? This action cannot be undone.</p>
             </div>
             <div class="modal-footer">
                 <form method="post" action="{% url 'delete_system' system.slug %}">
                     {% csrf_token %}
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-secondary me-5" data-bs-dismiss="modal">Cancel</button>
                     <button type="submit" class="btn btn-danger">Delete</button>
                 </form>
             </div>
