--- a/templates/base.html
+++ b/templates/base.html
@@ -39,10 +39,6 @@
                             <a class="nav-link {% if request.path == home_url %}active" aria-current="page{% endif %}"
                                 href="{% url 'index' %}">Home</a>
                         </li>
-                        <!-- Add more nav items as needed -->
-                        <!-- <li class="nav-item">
-                            <a class="nav-link" href="#contact">Contact</a>
-                        </li> -->
                         {% if user.is_authenticated %}
                         <li class="nav-item">
                             <a class="nav-link {% if request.path == create_url %}active" aria-current="page{% endif %}"
@@ -73,7 +69,7 @@
     </header>
 
     <div class="container-fluid px-0">
-        <div class="row my-0">
+        <div class="my-0">
             <div class="col-12">
                 <div class="my-bg-secondary border-bottom border-primary py-2 px-3">
                     <h5 class="mb-0 text-start"></h5>
