--- a/spec_a_console/templates/spec_a_console/system_detail.html
+++ b/spec_a_console/templates/spec_a_console/system_detail.html
@@ -38,7 +38,7 @@
                     <p class="text-muted small">Last updated: {{ system.updated_on|date:"F j, Y" }}</p>
                 </div>
             </div>
-            <div class="d-flex justify-content-around align-items-center mb-4">
+            <div class="d-flex justify-content-around align-items-center mt-5 mb-5">
                 {% if user.is_authenticated and system.created_by == user %}
                 <!-- Edit button -->
                 <a href="{% url 'edit_system' system.slug %}" class="btn btn-warning">Edit System</a>
@@ -55,36 +55,36 @@
 
     <!-- Creating New System reviews -->
     <div class="row">
-    <div class="col-12 col-md-8 mx-auto card mb-4 mt-3">
-        <div class="card-body">
-            {% if user.is_authenticated %}
-            {% if user_is_creator %}
-            <p class="text-warning text-center">You cannot review your own system.</p>
-            {% elif user_has_reviewed %}
-            <p class="text-warning text-center">You have already submitted a review for this system.</p>
-            {% else %}
-            <h3>Leave a review:</h3>
-            <p>You are logged in as: {{ user.username }}</p>
-            <form id="reviewForm" method="post" style="margin-top: 1.3em;">
-                {{ review_form | crispy }}
-                {% csrf_token %}
-                <div class="d-flex justify-content-between">
-                    <button id="submitButton" type="submit" class="btn btn-login btn-lg">Submit</button>
-                    <button type="reset" class="btn btn-cancel btn-lg ms-2">Clear</button>
-                </div>
-            </form>
-            {% endif %}
-            {% else %}
-            <p>Log in to add a review for this fantasy system!</p>
-            {% endif %}
+        <div class="col-12 col-md-8 mx-auto card mb-4 mt-4">
+            <div class="card-body">
+                {% if user.is_authenticated %}
+                {% if user_is_creator %}
+                <p class="text-center my-1">You cannot review your own system.</p>
+                {% elif user_has_reviewed %}
+                <p class="text-center my-1">You have already submitted a review for this system.</p>
+                {% else %}
+                <h3>Leave a review:</h3>
+                <p>You are logged in as: {{ user.username }}</p>
+                <form id="reviewForm" method="post" style="margin-top: 1.3em;">
+                    {{ review_form | crispy }}
+                    {% csrf_token %}
+                    <div class="d-flex justify-content-between">
+                        <button id="submitButton" type="submit" class="btn btn-login btn-lg">Submit</button>
+                        <button type="reset" class="btn btn-cancel btn-lg ms-2">Clear</button>
+                    </div>
+                </form>
+                {% endif %}
+                {% else %}
+                <p>Log in to add a review for this fantasy system!</p>
+                {% endif %}
+            </div>
         </div>
-    </div>
     </div>
 
     <!-- Displaying count of user reviews -->
     <div class="row">
-        <div class="col-12">
-            <strong class="text-secondary">
+        <div class="col-12 text-center">
+            <strong>
                 <i class="far fa-comments">Review count: </i> {{ review_count }}
             </strong>
         </div>
@@ -94,34 +94,38 @@
     </div>
     <!-- Displaying Reviews -->
     <div class="row">
-        <div class="col-md-8 card mb-4  mt-3 ">
-            <h3>Reviews:</h3>
+        <div class="col-md-8 mx-auto card mb-4 mt-3 review-section-bg">
+            <h3 class="mt-3 text-white">Reviews:</h3>
             <div class="card-body">
                 <!-- Loop to display any number of reviews -->
                 {% for review in reviews %}
-                <div class="p-2 reviews
-                    {% if not review.approved and review.reviewer == user %}
-                    faded{% elif not review.approved %} d-none{% endif %}">
-                    <p class="font-weight-bold">
-                        {{ review.reviewer }}
-                        <span class="font-weight-normal">
-                            {{ review.created_on }}
-                        </span> wrote:
-                    </p>
-                    <div id="review{{ review.id }}">
-                        {{ review.comment | linebreaks }}
-                    </div>
-                    <div>
-                        Score: {{ review.rating }}
-                    </div>
-                    {% if not review.approved and review.reviewer == user %}
-                    <p class="approval">
-                        This review is awaiting approval
-                    </p>
-                    {% endif %}
+                <div class="card my-2">
+                    <div class="p-2 reviews
+                        {% if not review.approved and review.reviewer == user %}
+                        faded{% elif not review.approved %} d-none{% endif %}">
+                        <p class="text-muted small review-user-bg">
+                            {{ review.reviewer }}: 
+                            <span class="text-muted small">
+                                {{ review.created_on }}
+                            </span> wrote:
+                        </p>
+                        <hr>
+                        <div id="review{{ review.id }}">
+                            {{ review.comment | linebreaks }}
+                        </div>
+                        <hr>
+                        <div class="text-muted small review-score-bg">
+                            Score: {{ review.rating }}
+                        </div>
+                        {% if not review.approved and review.reviewer == user %}
+                        <p class="approval">
+                            This review is awaiting approval
+                        </p>
+                        {% endif %}
 
-                    <!-- Edit / Delete review for a reviews user-owner will go here -->
+                        <!-- Edit / Delete review for a reviews user-owner will go here -->
 
+                    </div>
                 </div>
                 <!-- Our for loop ends here -->
                 {% endfor %}
