--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 
-<body>
+<body id="top">
     <!-- Header and Navbar -->
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark my-bg-primary" aria-label="Main navigation">
@@ -134,7 +134,8 @@
                 </div>
             </div>
         </div>
-        <div class="text-center p-3 my-bg-primary text-white">
+        <div class="d-flex justify-content-around p-3 my-bg-primary text-white">
+            <a href="#top" class="navbar-brand">Back to Top</a>
             &copy; {{ year|default:2025 }} Spec A Console!
         </div>
     </footer>
