--- a/spec_a_console/templates/spec_a_console/edit_system.html
+++ b/spec_a_console/templates/spec_a_console/edit_system.html
@@ -9,8 +9,12 @@
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form|crispy }}
-    <button type="submit" class="btn btn-primary">Save Changes</button>
+    <button type="submit" class="btn btn-login">Save Changes</button>
 </form>
+
+<div class="d-flex justify-content-center">
+    <a href="{% url 'index' %}" class="btn btn-primary" aria-label="Back to home page">&lt;&lt; Leave without saving</a>
+</div>
 
 {% else %}
     <p>You must be logged in and the owner of a system to edit/modify it!</p>
